Add Chrome addon for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 node_js: stable
+addons:
+  chrome: stable
 sudo: required
 before_script:
 - npm install -g bower polymer-cli eslint eslint-plugin-html web-component-tester
