--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
 node_js: stable
 addons:
-  chrome: stable
+  apt:
+      sources:
+        - google-chrome
+      packages:
+        - google-chrome-stable
 sudo: required
 before_script:
 - npm install -g bower polymer-cli eslint eslint-plugin-html web-component-tester
