--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,12 +2,47 @@
   "extends": "eslint:recommended",
   "env": {
     "es6": true,
-    "browser": true
+    "browser": true,
+    "mocha": true
   },
   "plugins": [
     "html"
   ],
   "globals": {
     "Polymer": false
+  },
+  "rules": {
+    "indent": [
+      "error",
+      2
+    ],
+    "linebreak-style": [
+      "error",
+      "unix"
+    ],
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "eqeqeq": [
+      "error",
+      "always"
+    ],
+    "space-infix-ops": [
+      "error",
+      {"int32Hint": false}
+    ],
+    "prefer-const": "error",
+    "no-const-assign": "error",
+    "no-var": "error",
+    "no-new-object": "error",
+    "no-array-constructor": "error",
+    "func-style": ["error", "declaration"],
+    "prefer-arrow-callback": "error",
+    "brace-style": "error"
   }
 }
